<resources>
    <string name="app_name" translatable="false">AndroidLabs</string>
    <string name="i_love_android">I Love Android</string>
    <string name="button_text">I\’m a button!</string>
    <string name="flag_description">Picture of American Flag</string>
    <string name="switch_text">Switch on/off</string>
    <string name="press">PRESS ME</string>
    <string name="checkBox">Check this out!</string>
    <string name="toastMessage">Label has been updated</string>
    <string name="snackbarMessage">The checkbox is now </string>
    <string name="cbOn">on</string>
    <string name="cbOff">off</string>


</resources>